--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
-names2.txt
-names.txt
+
+*name*
+collisions_report.txt
+
 
 # Created by https://www.gitignore.io/api/git,macos,linux,visualstudiocode
 
